# python-template

./: .gitignore  Dockerfile  Makefile  README.md  init.py  pyproject.toml
.github/workflows/: qc-and-test.yaml  release.yaml  semver-checker.yaml
src/: __init__.py
